--- a/chatbot_corporativo_garantia_de_verdade.ipynb
+++ b/chatbot_corporativo_garantia_de_verdade.ipynb
@@ -4,9 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "gpuType": "T4",
-      "authorship_tag": "ABX9TyPHtlKU05tjnFlIxNgG+TRa",
-      "include_colab_link": true
+      "gpuType": "T4"
     },
     "kernelspec": {
       "name": "python3",
@@ -4468,16 +4466,6 @@
     "accelerator": "GPU"
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/marquesbmc/Neural-Bruno-Lab/blob/main/chatbot_corporativo_garantia_de_verdade.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "source": [
